Logger.debug fixed, threadId() changed to getId()